# FerrumPress

./: Cargo.toml
ferrumpress-app/: Cargo.toml
ferrumpress-auth/: Cargo.toml
ferrumpress-auth/src/: keys.rs  lib.rs  password.rs  pqc.rs
ferrumpress-cache/: Cargo.toml
ferrumpress-cache/src/: lib.rs  memory.rs  noop.rs  redis_cache.rs
ferrumpress-cli/: Cargo.toml
ferrumpress-core/: Cargo.toml
ferrumpress-core/src/: config.rs  error.rs  lib.rs
ferrumpress-core/src/models/: column_kind.rs  media.rs  mod.rs  role.rs  task.rs  token_pair.rs  user.rs
ferrumpress-core/src/traits/: auth_provider.rs  cache.rs  image_processor.rs  media.rs  mod.rs  object_store.rs  raw_query.rs  relational_db.rs  search_engine.rs  session_store.rs  storage.rs  task_queue.rs
ferrumpress-db/: Cargo.toml
ferrumpress-db/src/: generic_service.rs  lib.rs  mysql.rs  postgres.rs  query_executor.rs  registry.rs  schema.rs  schema_builder.rs  schema_discovery.rs  sqlite.rs  type_mapping.rs
ferrumpress-db/src/migrations/: media.rs  migrations.rs  mod.rs  task_locks.rs
ferrumpress-queue/: Cargo.toml
ferrumpress-queue/src/: idempotency_db.rs  idempotency_redis.rs  kafka.rs  lib.rs  rabbitmq.rs  redis_queue.rs
ferrumpress-search/: Cargo.toml
ferrumpress-session/: Cargo.toml
ferrumpress-session/src/: database.rs  lib.rs  manager.rs  redis_store.rs
ferrumpress-storage/: Cargo.toml
ferrumpress-storage/src/: image_processor.rs  image_worker.rs  lib.rs  local.rs  media_service.rs  processed_variant.rs  s3.rs
