[package]
name = "ferrumpress-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
ferrumpress-core = { path = "../ferrumpress-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
serde = "1"
serde_json = "1"

# Опциональные бекенды
redis = { version = "1.2.1", features = ["tokio-comp", "aio"], optional = true }

[features]
default = []
memory = []
redis-backend = ["redis"]