[package]
name = "ferrumpress-session"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrumpress-core = { path = "../ferrumpress-core" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any"] }
async-trait = "0.1"
uuid = { version = "1" }
chrono = "0.4.44"
serde = "1"
serde_json = "1"
redis = { version = "1.2.1", features = ["tokio-comp", "aio"], optional = true }

[features]
default = ["database"]
database = []
redis-backend = ["redis"]